2005-04-28  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_alias)  Make the target the canonical
	address rather than the aliased address.
	(who_chunk)  Use the target to find bookkeeping aliases.
	Thanks to John Levine.

	* lib/Mj/Addr.pm:  (_alias)  Do not use alias information from
	a bookkeeping alias.

2005-03-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Use delete instead of undef
	to quell a warning.  Thanks to SRE.

2005-03-06  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_r_strip_body)  Mark the body as changed
	when a multipart message is condensed to a single part.
	Thanks to Richard Birkett.

2005-02-26  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  Account for the possibility
	of a failed "owner" event.

	* lib/Mj/Access.pm:  (_a_mailfile)  Take pains to prevent
	a mail loop of the whoami_owner address with itself.
	(_d_owner)  Messages to the list owners are now subject to 
	the access rules.

	* lib/Mj/CommandProps.pm:  Messages to the list owners are
	now subject to the access rules.

	* lib/Mj/Inform.pm:  (_inform_owner)  Take pains to prevent
	a mail loop of the whoami_owner address with itself.

	* lib/Mj/MailOut.pm:  (owner_done)  Apply the access rules
	to messages sent to the list owners which were not handled
	by the bounce parser.

2005-01-31  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Give a reasonable value
	for the elapsed time if the connection fails.
	Thanks to Marc Fournier.

	* lib/Mj/Parser.pm:  (parse_part)  Give a reasonable value
	for the elapsed time if no commands are found.

2005-01-16  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_d_advertise)  Show information about
	a list if an admin password for the list is used.
	Thanks to Roger Klorese.

2004-12-09  Michael Yount <csf@moscow.com>

	* files/INDEX.pl:  The "unregistered" file has a "noweb"
	counterpart.

	* lib/Majordomo.pm:  (trigger, _unregister)  Send farewell