@@ -1,3 +1,3 @@
 default user $TARGET
-  alias-noinform $SOURCE
+  alias-noinform-nomessage $SOURCE
 
